<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="start|left"
    android:gravity="start|left"
    android:layoutDirection="rtl">

    <!--<group
        android:layout_gravity="start"
        android:gravity="start">
        <item
            android:id="@+id/go_back_left"
            android:layout_gravity="start"
            android:gravity="start"
            android:icon="@drawable/ic_baseline_arrow_back_24"
            android:title="back"
            app:showAsAction="always" />
    </group>-->
    <group
        android:layout_gravity="end"
        android:gravity="right|end">
        <item
            android:id="@+id/go_back"
            android:layout_gravity="end"
            android:gravity="end"
            android:icon="@drawable/ic_baseline_arrow_back_24"
            android:title="@string/toolbar_back"
            app:showAsAction="always" />
        <item
            android:id="@+id/toolbarButtonFav"
            android:layout_gravity="end"
            android:gravity="end"
            android:icon="@drawable/ic_baseline_favorite_border_24"
            android:title="@string/toolbar_favourites"
            app:showAsAction="always" />
        <item
            android:id="@+id/toolbarButtonShare"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/toolbar_share"
            app:showAsAction="always"
            />
        <!--<item
            android:id="@+id/salir"
            android:title="Salir" />-->
    </group>

</menu>
