<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Perfil  -->
        <!-- <TextView
            android:id="@+id/textVerifyEmail"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="0dp"
            android:layout_weight="0"
            android:gravity="center|start"
            android:hint="you need to verify your email"
            android:textColorHint="@color/blue"
            android:textSize="12sp"
            android:textStyle="bold" />-->
        <LinearLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="6"
            android:orientation="horizontal"
            android:clickable="true">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_weight="2"
                android:src="@drawable/ic_baseline_person_36"

                android:scaleY="2"
                android:scaleX="2"
                />
            <LinearLayout
                android:id="@+id/nameAndEmail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:layout_weight="6"
                android:orientation="vertical"
                android:clickable="true">
                <TextView
                    android:id="@+id/textVerifyEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="2"
                    android:gravity="bottom|start"
                    android:hint=""
                    android:textColorHint="@color/colorScarletRed"
                    android:textSize="14sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_weight="2"
                    android:gravity="center|start"
                    android:hint=""
                    android:textColorHint="@color/black"
                    android:textSize="26sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/btn_logout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_logout_24"
                app:tint="@color/owl_blue_analog_orange"
                android:background="@color/transparent"

                android:scaleY="1.5"
                android:scaleX="1.5"
                />
        </LinearLayout>

        <!-- ++++++++++++++++ CUENTA ++++++++++++++++++ -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="@color/whiteGrey"
            android:gravity="bottom|start"
            android:hint="@string/home_account_label"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:gravity="center|start"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                app:tint="@color/owl_blue_satured_clear"
                android:src="@drawable/ic_baseline_person_24" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="0dp"
                android:layout_weight="4"
                android:gravity="center|start"
                android:hint="@string/home_preferences"
                android:textColorHint="@color/black"
                android:textSize="20sp" />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                app:tint="@color/owl_blue_satured_clear"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/configuration_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:gravity="center|start"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                app:tint="@color/owl_blue_satured_clear"
                android:src="@drawable/ic_baseline_settings_24" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="0dp"
                android:layout_weight="4"
                android:gravity="center|start"
                android:hint="@string/home_configuration"
                android:textColorHint="@color/black"
                android:textSize="20sp" />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                app:tint="@color/owl_blue_satured_clear"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/pro_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:textSize="20sp"
            android:gravity="center|start"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                app:tint="@color/owl_blue_satured_clear"
                android:src="@drawable/ic_baseline_workspace_premium_24" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="0dp"
                android:layout_weight="4"
                android:gravity="center|start"
                android:hint="@string/home_premium"
                android:textColorHint="@color/black"
                android:textSize="20sp" />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                app:tint="@color/owl_blue_satured_clear"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
        </LinearLayout>

        <!-- ++++++++++++++++ EVENTOS ++++++++++++++++++ -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_weight="4"
            android:background="@color/whiteGrey"
            android:gravity="bottom|start"
            android:hint="@string/home_manage_events_label"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/saved_events_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:textSize="20sp"
            android:gravity="center|start"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                app:tint="@color/owl_blue_satured_clear"
                android:src="@drawable/ic_baseline_event_24" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="0dp"
                android:layout_weight="4"
                android:gravity="center|start"
                android:hint="@string/home_saved_events"
                android:textColorHint="@color/black"
                android:textSize="20sp" />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                app:tint="@color/owl_blue_satured_clear"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/past_events_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:textSize="20sp"
            android:gravity="center|start"
            android:focusable="true"
            android:clickable="true">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                app:tint="@color/owl_blue_satured_clear"
                android:src="@drawable/ic_baseline_event_repeat_24" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="0dp"
                android:layout_weight="4"
                android:gravity="center|start"
                android:hint="@string/home_previous_events"
                android:textColorHint="@color/black"
                android:textSize="20sp" />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                app:tint="@color/owl_blue_satured_clear"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
        </LinearLayout>

        <!-- ++++++++++++++++ AYUDA ++++++++++++++++++ -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_weight="4"
            android:background="@color/whiteGrey"
            android:gravity="bottom|start"
            android:hint="@string/home_help_label"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <LinearLayout
            android:id="@+id/help_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:textSize="20sp"
            android:gravity="center|start"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                app:tint="@color/owl_blue_satured_clear"
                android:src="@drawable/ic_baseline_help_24" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="0dp"
                android:layout_weight="4"
                android:gravity="center|start"
                android:hint="@string/home_help"
                android:textColorHint="@color/black"
                android:textSize="20sp" />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                app:tint="@color/owl_blue_satured_clear"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"/>
    </LinearLayout>

    <!--    Aqui el sistema amb un unic botó
    <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:textSize="20sp">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:drawableLeft="@drawable/ic_baseline_person_24"
                    android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
                    android:gravity="center|start"
                    android:text="  Conviértete en pro*"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>